WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145325
MediaPlayer doesn't need isPlayingToWirelessPlaybackTarget and isCurrentPlaybackTargetWireless
https://bugs.webkit.org/show_bug.cgi?id=145325
Summary
MediaPlayer doesn't need isPlayingToWirelessPlaybackTarget and isCurrentPlayb...
Eric Carlson
Reported
2015-05-22 15:52:18 PDT
Both methods return the same state, so get rid of
Attachments
Proposed patch.
(10.07 KB, patch)
2015-05-22 16:16 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2015-05-22 16:16:47 PDT
Created
attachment 253614
[details]
Proposed patch.
Brent Fulgham
Comment 2
2015-05-22 16:19:55 PDT
(In reply to
comment #0
)
> Both methods return the same state, so get rid of
Get rid of ... get rid of what!?! Don't keep me in suspense!
Brent Fulgham
Comment 3
2015-05-22 16:22:31 PDT
Comment on
attachment 253614
[details]
Proposed patch. Nice cleanup! r=me.
Eric Carlson
Comment 4
2015-05-22 19:12:47 PDT
Committed
r184814
:
https://trac.webkit.org/r184814
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug