Source/WebCore/platform/graphics/MediaPlayer.cpp
@@ -883,11 +883,6 @@ bool MediaPlayer::canPlayToWirelessPlaybackTarget() const
     return m_private->canPlayToWirelessPlaybackTarget();
 }
 
-bool MediaPlayer::isPlayingToWirelessPlaybackTarget() const
-{
-    return m_private->isPlayingToWirelessPlaybackTarget();
-}
-
 void MediaPlayer::setWirelessPlaybackTarget(Ref<MediaPlaybackTarget>&& device)
 {
     m_private->setWirelessPlaybackTarget(WTF::move(device));
